--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ plainwhite:
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
   search: true # set to true to enable searchbar
+  disqus_shortname: games
   dark_mode: true # set to true to add dark mode toggle
   portfolio_image: "assets/portfolio.png" # the path from the base directory of the site to the image to display (no / at the start)
   portfolio_image_dark: "assets/portfolio_dark.png"
