--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ sass:
 plainwhite:
   name: Wei Jin Ang
   tagline: Data Engineering | Data Analytics
+  about: "about.md"
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
   search: true # set to true to enable searchbar
