--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ plainwhite:
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
-header_pages: about.md
+header_pages: "about.md"
 
 # Build settings
 remote_theme: samarsault/plainwhite-jekyll
