--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ plainwhite:
   tagline: Data Engineering | Data Analytics
   navigation:
     - title: About
-      url: "/about.md"
+      url: "https://github.com/wjang96/wjang96.github.io/blob/main/about.md"
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
   search: true # set to true to enable searchbar
